# gjs-git-bug

./: com.gir.test.json  meson.build
data/: com.gir.test.appdata.xml.in  com.gir.test.desktop.in  com.gir.test.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: com.gir.test.data.gresource.xml  com.gir.test.src.gresource.xml  main.js  meson.build  window.js  window.ui
subprojects/libhello/: hello.c  hello.h  meson.build
